--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -669,50 +669,29 @@
 
 <script>
   const canvas = document.getElementById("vapor");
-  const ctx = canvas.getContext("2d", { alpha:true });
+  const ctx = canvas.getContext("2d", { alpha: true });
 
-  // Offscreen buffer (simulation)
+  // Offscreen buffer (we render the sim here, then blur-composite to main)
   const buf = document.createElement("canvas");
-  const btx = buf.getContext("2d", { alpha:true });
+  const btx = buf.getContext("2d", { alpha: true });
 
-  // ✅ Mobile normalization buffers
-  const post = document.createElement("canvas");
-  const ptx  = post.getContext("2d", { alpha:true });
-
-  const melt = document.createElement("canvas");
-  const mtx  = melt.getContext("2d", { alpha:true });
-
-  // ✅ Optional dither (mobile only) to kill gradient banding rings
-  const noise = document.createElement("canvas");
-  const ntx   = noise.getContext("2d", { alpha:true });
-  noise.width = 128;
-  noise.height = 128;
-  (function seedNoise(){
-    const img = ntx.createImageData(noise.width, noise.height);
-    for (let i=0;i<img.data.length;i+=4){
-      const v = (Math.random() * 255) | 0;
-      img.data[i+0] = v;
-      img.data[i+1] = v;
-      img.data[i+2] = v;
-      img.data[i+3] = 255;
-    }
-    ntx.putImageData(img, 0, 0);
-  })();
-
-  // Mobile detection: width breakpoint OR coarse pointer devices
+  // ✅ Mobile detection (real devices)
   const mqMobile = window.matchMedia("(max-width: 980px), (hover: none) and (pointer: coarse)");
   let isMobile = mqMobile.matches;
-  mqMobile.addEventListener?.("change", (e)=>{ isMobile = e.matches; resize(); });
+  mqMobile.addEventListener?.("change", (e) => {
+    isMobile = e.matches;
+    buildPuffTexture(); // rebuild if needed
+    resize();
+  });
 
   const S = {
-    w:0, h:0,
+    w: 0, h: 0,
     dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
-    t:0,
+    t: 0,
 
-    // slow drift
     speed: 0.0046,
 
-    // ✅ Desktop baseline (UNCHANGED from your version)
+    // Desktop baseline (your original look)
     scale: 0.70,
     fade: 0.22,
     glow: 0.25,
@@ -727,113 +706,203 @@
     blurDetail: 4,
     blurGlow: 14,
 
-    // ✅ Mobile: force same look everywhere by standardizing internal sim resolution
-    // This sets the simulation's LONG SIDE to a constant pixel size across all phones.
-    mobileSimLongSide: 980,   // try 900–1100; higher = smoother/heavier
+    // ✅ Mobile: slightly higher sim res helps texture look smooth
+    mobileScale: 0.90,
 
-    // ✅ Mobile: “melt” normalization (downsample → blur hard → upsample)
-  mobileMeltDown: 0.70,     // don't go super low (0.32 is too mushy)
-mobileMeltBlur: 12,       // moderate melt (not foggy)
-mobileDetailAlpha: 0.20,  // keep detail but don’t bring back discs
-mobileDitherAlpha: 0.006, // tiny — should NOT look grainy
-    mx:0, my:0, px:0, py:0
+    // ✅ Mobile: texture stamping strength tuning
+    mobileStampJitter: 0.18, // rotation jitter (0–0.3 feels nice)
+    mobileStampAlphaBoost: 1.0, // 1.0 = same; 0.9 softer; 1.1 stronger
+
+    mx: 0, my: 0, px: 0, py: 0
   };
 
-  function resize(){
+  function resize() {
     S.w = Math.floor(window.innerWidth);
     S.h = Math.floor(window.innerHeight);
 
-    // Main canvas uses DPR for crisp UI layers
-    canvas.width  = Math.floor(S.w * S.dpr);
+    // Main canvas DPR
+    canvas.width = Math.floor(S.w * S.dpr);
     canvas.height = Math.floor(S.h * S.dpr);
-    canvas.style.width  = S.w + "px";
+    canvas.style.width = S.w + "px";
     canvas.style.height = S.h + "px";
-    ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
+    ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
 
-    // ✅ SIM BUFFER SIZING
-    if (!isMobile) {
-      // Desktop: exactly your original behavior
-      buf.width  = Math.floor(S.w * S.scale);
-      buf.height = Math.floor(S.h * S.scale);
-    } else {
-      // Mobile: fixed internal “long side” sim resolution (consistent across devices)
-      const longSide = Math.max(S.w, S.h);
-      const k = S.mobileSimLongSide / longSide;  // scale factor to reach standard long side
-      buf.width  = Math.max(2, Math.floor(S.w * k));
-      buf.height = Math.max(2, Math.floor(S.h * k));
-    }
-    btx.setTransform(1,0,0,1,0,0);
+    // Sim buffer (no DPR)
+    const simScale = isMobile ? S.mobileScale : S.scale;
+    buf.width = Math.floor(S.w * simScale);
+    buf.height = Math.floor(S.h * simScale);
+    btx.setTransform(1, 0, 0, 1, 0, 0);
 
-    // post matches sim size
-    post.width  = buf.width;
-    post.height = buf.height;
-    ptx.setTransform(1,0,0,1,0,0);
-
-    // melt is smaller (mobile-only, but we allocate regardless)
-    const md = isMobile ? S.mobileMeltDown : 0.60;
-    melt.width  = Math.max(2, Math.floor(buf.width  * md));
-    melt.height = Math.max(2, Math.floor(buf.height * md));
-    mtx.setTransform(1,0,0,1,0,0);
-
-    // store for step()
     S.bw = buf.width;
     S.bh = buf.height;
 
-    // smoothing hints (browser-dependent, but keep them on)
     ctx.imageSmoothingEnabled = true;
     ctx.imageSmoothingQuality = "high";
     btx.imageSmoothingEnabled = true;
     btx.imageSmoothingQuality = "high";
-    ptx.imageSmoothingEnabled = true;
-    ptx.imageSmoothingQuality = "high";
-    mtx.imageSmoothingEnabled = true;
-    mtx.imageSmoothingQuality = "high";
 
     // clear
     btx.fillStyle = "rgba(0,0,0,1)";
-    btx.fillRect(0,0,S.bw,S.bh);
-    ptx.clearRect(0,0,post.width,post.height);
-    mtx.clearRect(0,0,melt.width,melt.height);
-    ctx.clearRect(0,0,S.w,S.h);
+    btx.fillRect(0, 0, S.bw, S.bh);
+    ctx.clearRect(0, 0, S.w, S.h);
   }
-  window.addEventListener("resize", resize, { passive:true });
+  window.addEventListener("resize", resize, { passive: true });
   resize();
 
-  window.addEventListener("pointermove", (e)=>{
+  window.addEventListener("pointermove", (e) => {
     S.mx = (e.clientX / S.w) * 2 - 1;
     S.my = (e.clientY / S.h) * 2 - 1;
-  }, { passive:true });
+  }, { passive: true });
 
-  const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
+  const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
 
-  function n2(x,y){
-    return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
+  // organic-ish fast noise
+  function n2(x, y) {
+    return Math.sin(x * 1.7 + Math.cos(y * 1.3)) * Math.cos(y * 1.5 + Math.sin(x * 1.1));
   }
 
-  function puff(x,y,r, colA, colB, a){
-    const g = btx.createRadialGradient(x,y,0, x,y,r);
-    g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
-    g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
-    g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
+  // ---------------------------
+  // ✅ MOBILE-ONLY: Puff texture
+  // ---------------------------
+  let puffTex = null;
+  let puffSize = 256;
+
+  function buildPuffTexture() {
+    // Only needed for mobile. Desktop keeps radial gradients.
+    if (!isMobile) return;
+
+    puffSize = 256;
+    puffTex = document.createElement("canvas");
+    puffTex.width = puffSize;
+    puffTex.height = puffSize;
+
+    const ptx = puffTex.getContext("2d", { alpha: true });
+    ptx.clearRect(0, 0, puffSize, puffSize);
+
+    // Create a soft alpha field with noise baked in (no gradients → no banding rings)
+    const img = ptx.createImageData(puffSize, puffSize);
+    const cx = puffSize * 0.5;
+    const cy = puffSize * 0.5;
+    const maxR = puffSize * 0.5;
+
+    // single-pass noise field (static)
+    for (let y = 0; y < puffSize; y++) {
+      for (let x = 0; x < puffSize; x++) {
+        const dx = (x - cx) / maxR;
+        const dy = (y - cy) / maxR;
+        const r = Math.sqrt(dx * dx + dy * dy);
+
+        // soft falloff (not a gradient we draw later; it’s baked into pixels)
+        let a = Math.max(0, 1 - Math.pow(r, 1.65));
+
+        // add gentle “cloud” noise, stronger in mid region
+        const n = (Math.random() * 2 - 1);
+        const mid = Math.max(0, 1 - Math.abs(r - 0.55) / 0.55);
+        a *= (1 + n * 0.22 * mid);
+
+        // soften edges extra
+        a *= (r < 1 ? 1 : 0);
+
+        const i = (y * puffSize + x) * 4;
+        const alpha = Math.floor(clamp(a, 0, 1) * 255);
+
+        // white RGB; we tint via drawImage + globalCompositeOperation/lighter
+        img.data[i + 0] = 255;
+        img.data[i + 1] = 255;
+        img.data[i + 2] = 255;
+        img.data[i + 3] = alpha;
+      }
+    }
+    ptx.putImageData(img, 0, 0);
+
+    // extra soften: cheap “manual blur” by stamping itself a few times
+    ptx.globalCompositeOperation = "source-over";
+    ptx.globalAlpha = 0.18;
+    for (let k = 0; k < 10; k++) {
+      const ox = (Math.random() * 2 - 1) * 2.2;
+      const oy = (Math.random() * 2 - 1) * 2.2;
+      ptx.drawImage(puffTex, ox, oy);
+    }
+    ptx.globalAlpha = 1;
+    ptx.globalCompositeOperation = "source-over";
+  }
+
+  // build once (mobile only)
+  buildPuffTexture();
+
+  // ---------------------------
+  // ✅ Puff renderers
+  // ---------------------------
+
+  // Desktop: your original radial-gradient puff (can band on mobile, so we avoid it there)
+  function puffGradient(x, y, r, colA, colB, a) {
+    const g = btx.createRadialGradient(x, y, 0, x, y, r);
+    g.addColorStop(0.00, colA.replace("{a}", (0.52 * a).toFixed(4)));
+    g.addColorStop(0.38, colB.replace("{a}", (0.46 * a).toFixed(4)));
+    g.addColorStop(0.78, colA.replace("{a}", (0.15 * a).toFixed(4)));
     g.addColorStop(1.00, colA.replace("{a}", "0"));
     btx.fillStyle = g;
     btx.beginPath();
-    btx.arc(x,y,r,0,Math.PI*2);
+    btx.arc(x, y, r, 0, Math.PI * 2);
     btx.fill();
   }
 
-  function ribbonY(u, yBase, amp, phase){
+  // Mobile: texture stamp puff (no radial gradients → no concentric banding rings)
+  function puffStamp(x, y, r, colA, colB, a) {
+    // Ensure texture exists
+    if (!puffTex) buildPuffTexture();
+    if (!puffTex) return;
+
+    // Choose a tint color between A and B by using one of them as fill behind a mask-like stamp
+    // We tint by drawing a colored rect with "source-in" after stamping alpha.
+    // (Still no gradients involved.)
+    const size = r * 2;
+
+    // Stamp alpha (white texture) onto buffer
+    btx.save();
+
+    // small rotation jitter so the texture pattern doesn’t repeat
+    const rot = (Math.random() * 2 - 1) * S.mobileStampJitter;
+    btx.translate(x, y);
+    btx.rotate(rot);
+
+    // draw puff alpha
+    btx.globalAlpha = clamp(a * S.mobileStampAlphaBoost, 0, 1);
+    btx.drawImage(puffTex, -r, -r, size, size);
+
+    // tint: pick A/B mix by alternating (fast + looks organic)
+    const useA = Math.random() < 0.55;
+    const rgba = useA ? colA : colB;
+
+    // Colorize the stamped alpha
+    btx.globalCompositeOperation = "source-in";
+    btx.fillStyle = rgba.replace("{a}", "1");
+    btx.fillRect(-r, -r, size, size);
+
+    // Restore to lighter accumulation (caller expects lighter already)
+    btx.restore();
+  }
+
+  // Wrapper chooses correct method
+  function puff(x, y, r, colA, colB, a) {
+    if (isMobile) puffStamp(x, y, r, colA, colB, a);
+    else puffGradient(x, y, r, colA, colB, a);
+  }
+
+  // Across-screen centerline
+  function ribbonY(u, yBase, amp, phase) {
     const t = S.t;
-    const f1 = Math.sin(t*0.95 + u*6.2 + phase);
-    const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
-    const f3 = Math.sin(t*1.35 + u*3.2);
-    const wave = f1*0.55 + f2*0.30 + f3*0.15;
+    const f1 = Math.sin(t * 0.95 + u * 6.2 + phase);
+    const f2 = Math.sin(t * 0.55 + u * 13.0 - phase * 0.7);
+    const f3 = Math.sin(t * 1.35 + u * 3.2);
+    const wave = f1 * 0.55 + f2 * 0.30 + f3 * 0.15;
     return yBase + wave * amp;
   }
 
-  function step(){
+  function step() {
     S.t += S.speed;
 
+    // mouse drift
     S.px += (S.mx - S.px) * 0.03;
     S.py += (S.my - S.py) * 0.03;
 
@@ -843,109 +912,87 @@ mobileDitherAlpha: 0.006, // tiny — should NOT look grainy
     // fade buffer (trails)
     btx.globalCompositeOperation = "source-over";
     btx.fillStyle = `rgba(0,0,0,${S.fade})`;
-    btx.fillRect(0,0,W,H);
+    btx.fillRect(0, 0, W, H);
 
-    // draw vapor
+    // draw vapor (accumulate)
     btx.globalCompositeOperation = "lighter";
 
     const layers = [
-      { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-      { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-      { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+      { y: 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
+      { y: 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
+      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
     ];
 
-    for(const L of layers){
-      const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
+    for (const L of layers) {
+      const sweep  = (Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5);
       const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
       const steps = 120;
 
-      for(let i=0;i<=steps;i++){
-        const u = i/steps;
+      for (let i = 0; i <= steps; i++) {
+        const u = i / steps;
 
         const TAIL = 520;
-        const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
-        const yC = ribbonY(u, H*L.y, H*L.amp, L.phase) + S.py*12;
+        const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
+        const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
 
         const band = (S.band * H);
 
-        const tt = S.t*0.9 + L.phase + u*2.0;
-        const wx = n2(tt*0.8, u*4.0 + L.phase);
-        const wy = n2(u*3.0 - L.phase, tt*0.7);
+        const tt = S.t * 0.9 + L.phase + u * 2.0;
+        const wx = n2(tt * 0.8, u * 4.0 + L.phase);
+        const wy = n2(u * 3.0 - L.phase, tt * 0.7);
 
         const jx = wx * band * 0.36 * S.breakUp;
         const jy = wy * band * 0.30 * S.breakUp;
 
-        const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
-        const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
+        const c1 = (Math.sin(S.t * 0.30 + L.tint + u * 2.1) * 0.5 + 0.5);
+        const c2 = (Math.cos(S.t * 0.24 - L.tint + u * 1.7) * 0.5 + 0.5);
 
-        const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`;
-        const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
+        const A = `rgba(${Math.floor(84 + 22 * c2)}, ${Math.floor(243 - 18 * c1)}, ${Math.floor(164 + 34 * c1)}, {a})`;
+        const B = `rgba(${Math.floor(72 + 16 * c1)}, ${Math.floor(155 + 120 * c2)}, ${Math.floor(125 + 26 * c2)}, {a})`;
 
-        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
+        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
 
-        const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
-        const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
+        // PASS 1: wide haze
+        const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)), 52, 220);
+        const a1 = (0.010 + 0.010 * c1) * S.density * L.strength * (0.40 + 0.60 * end);
         puff(x, yC, r1, A, B, a1);
 
-        const r2 = clamp(r1*0.40, 20, 88);
+        // PASS 2: inner turbulence
+        const r2 = clamp(r1 * 0.40, 20, 88);
         const a2 = a1 * 0.78;
         puff(x + jx, yC + jy, r2, B, A, a2);
 
         const off = (wy * 0.5 + 0.5) * band * 0.90;
-        puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
-        puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
+        puff(x - jx * 0.55, yC + off * 0.32, r2 * 0.78, A, B, a2 * 0.50);
+        puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, a2 * 0.46);
       }
 
-      const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
-      const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
-      puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
+      // background volume
+      const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
+      const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
+      puff(hx, hy, Math.hypot(W, H) * 0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009 * S.density);
     }
 
     btx.globalCompositeOperation = "source-over";
 
-    // ✅ Mobile normalization source:
-    // Desktop: buf directly (your original look)
-    // Mobile: melt pass -> post, then composite from post
-    let src = buf;
-
-    if (isMobile) {
-      // Downsample + heavy blur into melt
-      mtx.save();
-      mtx.clearRect(0,0,melt.width,melt.height);
-      mtx.filter = `blur(${S.mobileMeltBlur}px)`;
-      mtx.globalAlpha = 1;
-      mtx.drawImage(buf, 0, 0, W, H, 0, 0, melt.width, melt.height);
-      mtx.restore();
-      mtx.filter = "none";
-
-      // Upsample back to post
-      ptx.save();
-      ptx.clearRect(0,0,post.width,post.height);
-      ptx.globalAlpha = 1;
-      ptx.drawImage(melt, 0, 0, melt.width, melt.height, 0, 0, post.width, post.height);
-      ptx.restore();
-
-      src = post;
-    }
-
-    // Final composite to main canvas
+    // composite to main canvas
     ctx.globalCompositeOperation = "source-over";
-    ctx.clearRect(0,0,S.w,S.h);
+    ctx.clearRect(0, 0, S.w, S.h);
 
     // base pass
     ctx.save();
     ctx.filter = `blur(${S.blurBase}px)`;
     ctx.globalAlpha = 1;
-    ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
-    // detail pass (mobile softened)
+    // detail pass
     ctx.save();
     ctx.filter = `blur(${S.blurDetail}px)`;
     ctx.globalCompositeOperation = "lighter";
-    ctx.globalAlpha = isMobile ? S.mobileDetailAlpha : 0.55;
-    ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.globalAlpha = 0.55;
+    ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
     // glow pass
@@ -953,22 +1000,8 @@ mobileDitherAlpha: 0.006, // tiny — should NOT look grainy
     ctx.filter = `blur(${S.blurGlow}px)`;
     ctx.globalCompositeOperation = "lighter";
     ctx.globalAlpha = S.glow;
-    ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
-
-    // ✅ Mobile-only dither overlay (breaks banding rings)
-    if (isMobile && S.mobileDitherAlpha > 0) {
-      ctx.save();
-      ctx.globalCompositeOperation = "source-over";
-      ctx.globalAlpha = S.mobileDitherAlpha;
-      // tile noise across the whole canvas
-      for (let y=0; y<S.h; y+=noise.height) {
-        for (let x=0; x<S.w; x+=noise.width) {
-          ctx.drawImage(noise, x, y);
-        }
-      }
-      ctx.restore();
-    }
 
     ctx.globalAlpha = 1;
     ctx.globalCompositeOperation = "source-over";
@@ -981,7 +1014,7 @@ mobileDitherAlpha: 0.006, // tiny — should NOT look grainy
   // Reduced motion
   if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
     gsap.ticker.remove(step);
-    for(let i=0;i<20;i++) step();
+    for (let i = 0; i < 20; i++) step();
   }
 </script>
   <script src="app.js"></script>
