--- a/royaltytest.html
+++ b/royaltytest.html
@@ -1,61 +1,7 @@
-<table role="presentation" cellpadding="0" cellspacing="0" border="0">
+<table cellpadding="0" cellspacing="0" border="0" style="margin:0; padding:0; border-collapse:collapse; background-color:transparent">
   <tr>
-    <td
-      width="820"
-      height="295"
-      align="left"
-      valign="top"
-      style="
-        background-image:url('images/Blank\ Signature.png');
-        background-repeat:no-repeat;
-        font-family:Arial, sans-serif;
-        color:#ffffff;
-      "
-    >
-      <!-- inner wrapper that moves text only -->
-      <div style="padding:16px 16px 0 490px;
-      font-family:'Segoe UI', Arial, Helvetica, sans-serif;"
-      >
-        <div style="line-height:1.4;">
-
-          <!-- Name -->
-          <div style="font-size:18px; font-weight:bold;">
-            Carlos Huerta
-          </div>
-
-          <!-- Title -->
-          <div style="font-size:14px; opacity:0.85;">
-            Lead Developer · MCVDesign
-          </div>
-
-          <!-- Spacer -->
-          <div style="height:10px; line-height:10px;">&nbsp;</div>
-
-          <!-- Phone -->
-          <a href="tel:+17135551234"
-             style="font-size:14px; color:#ffffff; text-decoration:none;">
-            📞 (713) 555-1234
-          </a><br>
-
-          <!-- Email -->
-          <a href="mailto:hello@yourdomain.com"
-             style="font-size:14px; color:#ffffff; text-decoration:none;">
-            ✉️ hello@yourdomain.com
-          </a><br><br>
-
-          <!-- Social -->
-          <a href="https://linkedin.com/company/yourcompany"
-             style="font-size:14px; color:#ffffff; text-decoration:none; margin-right:12px;">
-            LinkedIn
-          </a>
-
-          <a href="https://instagram.com/yourcompany"
-             style="font-size:14px; color:#ffffff; text-decoration:none;">
-            Instagram
-          </a>
-
-        </div>
-      </div>
+    <td style="margin:0; padding:0;">
+      <img src="images/CarlosSignature.gif" alt="MCVDesign Signature" width="800" height="288" style="display:block; border:0; margin:0; padding:0;">
     </td>
   </tr>
 </table>
