--- a/royaltytest.html
+++ b/royaltytest.html
@@ -1,7 +1,13 @@
-<table cellpadding="0" cellspacing="0" border="0" style="margin:0; padding:0; border-collapse:collapse; background-color:transparent">
+<table role="presentation" cellpadding="0" cellspacing="0" border="0" style="margin:0; padding:0; border-collapse:collapse;">
   <tr>
     <td style="margin:0; padding:0;">
-      <img src="images/CarlosSignature.gif" alt="MCVDesign Signature" width="800" height="288" style="display:block; border:0; margin:0; padding:0;">
+      <img
+        src="https://mcvdesign.com/images/CarlosSignature.gif"
+        alt="MCVDesign Signature"
+        width="800"
+        height="288"
+        style="display:block; border:0; outline:none; text-decoration:none; margin:0; padding:0;"
+      >
     </td>
   </tr>
 </table>
