--- a/royaltytest.html
+++ b/royaltytest.html
@@ -2,7 +2,7 @@
   <tr>
     <td style="margin:0; padding:0;">
       <img
-        src="images/CarlosSignature.gif"
+        src="images/test1.gif"
         alt="MCVDesign Signature"
         width="600"
         height="216"
