--- a/royaltytest2.html
+++ b/royaltytest2.html
@@ -2,7 +2,7 @@
   <tr>
     <td style="margin:0; padding:0;">
       <img
-        src="images/Carlos-Signature-Small.gif"
+        src="images/test2.gif"
         alt="MCVDesign Signature"
         width="600"
         height="216"
