--- a/carlos.html
+++ b/carlos.html
@@ -2,7 +2,7 @@
   <tr>
     <td style="margin:0; padding:0;">
       <img
-        src="images/test2.gif"
+        src="images/CarlosFinal.gif"
         alt="MCVDesign Signature"
         width="600"
         height="216"
