--- a/carlos.html
+++ b/carlos.html
@@ -1,13 +1,92 @@
-<table role="presentation" cellpadding="0" cellspacing="0" border="0" style="margin:0; padding:0; border-collapse:collapse;">
+<table role="presentation"
+       cellpadding="0"
+       cellspacing="0"
+       border="0"
+       style="margin:0; padding:0; border-collapse:collapse;">
   <tr>
+    <!-- GIF -->
     <td style="margin:0; padding:0;">
       <img
-        src="images/CarlosFinal.gif"
-        alt="MCVDesign Signature"
+        src="https://mcvdesign.com/images/CarlosFinal.gif"
+        alt=""
         width="600"
         height="200"
-        style="display:block; border:0; outline:none; text-decoration:none; margin:0; padding:0;"
+        style="display:block; border:0; outline:none; text-decoration:none;"
       >
+    </td>
+
+    <!-- Vertical divider -->
+    <td
+      width="2"
+      style="background:#000000; padding:0; margin:0;">
+      &nbsp;
+    </td>
+
+    <!-- Social icons column -->
+    <td
+      valign="middle"
+      style="padding:0 0 0 10px; margin:0;">
+      <table role="presentation" cellpadding="0" cellspacing="0" border="0">
+        <tr>
+          <td style="padding-bottom:8px;">
+            <a href="https://linkedin.com/company/yourcompany">
+              <img src="https://mcvdesign.com/images/social1.png"
+                   width="24"
+                   height="24"
+                   style="display:block; border:0;"
+                   alt="LinkedIn">
+            </a>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding-bottom:8px;">
+            <a href="https://instagram.com/yourcompany">
+              <img src="https://mcvdesign.com/images/social2.png"
+                   width="24"
+                   height="24"
+                   style="display:block; border:0;"
+                   alt="Instagram">
+            </a>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding-bottom:8px;">
+            <a href="https://twitter.com/yourcompany">
+              <img src="https://mcvdesign.com/images/social3.png"
+                   width="24"
+                   height="24"
+                   style="display:block; border:0;"
+                   alt="X / Twitter">
+            </a>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding-bottom:8px;">
+            <a href="https://facebook.com/yourcompany">
+              <img src="https://mcvdesign.com/images/social4.png"
+                   width="24"
+                   height="24"
+                   style="display:block; border:0;"
+                   alt="Facebook">
+            </a>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <a href="https://mcvdesign.com">
+              <img src="https://mcvdesign.com/images/social5.png"
+                   width="24"
+                   height="24"
+                   style="display:block; border:0;"
+                   alt="Website">
+            </a>
+          </td>
+        </tr>
+      </table>
     </td>
   </tr>
 </table>
