--- a/carlos.html
+++ b/carlos.html
@@ -15,20 +15,23 @@
       >
     </td>
 
-    <!-- Vertical divider -->
-    <td
-      width="2"
-      style="background:#000000; padding:0; margin:0;">
+        <!-- Vertical divider -->
+        <!-- spacer -->
+    <td width="15" style="font-size:0; line-height:0;">&nbsp;</td>
+
+    <!-- divider -->
+    <td width="2" style="background:#000000; font-size:0; line-height:0;">
       &nbsp;
     </td>
 
+    <td width="15" style="font-size:0; line-height:0;">&nbsp;</td>
     <!-- Social icons column -->
     <td
       valign="middle"
       style="padding:0 0 0 10px; margin:0;">
       <table role="presentation" cellpadding="0" cellspacing="0" border="0">
         <tr>
-          <td style="padding-bottom:8px;">
+          <td style="padding-bottom:16px;">
             <a href="https://linkedin.com/company/yourcompany">
               <img src="https://mcvdesign.com/images/social1.png"
                    width="24"
@@ -40,7 +43,7 @@
         </tr>
 
         <tr>
-          <td style="padding-bottom:8px;">
+          <td style="padding-bottom:16px;">
             <a href="https://instagram.com/yourcompany">
               <img src="https://mcvdesign.com/images/social2.png"
                    width="24"
@@ -52,7 +55,7 @@
         </tr>
 
         <tr>
-          <td style="padding-bottom:8px;">
+          <td style="padding-bottom:16px;">
             <a href="https://twitter.com/yourcompany">
               <img src="https://mcvdesign.com/images/social3.png"
                    width="24"
@@ -64,7 +67,7 @@
         </tr>
 
         <tr>
-          <td style="padding-bottom:8px;">
+          <td style="padding-bottom:16px;">
             <a href="https://facebook.com/yourcompany">
               <img src="https://mcvdesign.com/images/social4.png"
                    width="24"
