--- a/carlos3.html
+++ b/carlos3.html
@@ -32,8 +32,14 @@
     <td width="15" style="font-size:0; line-height:0;">&nbsp;</td>
 
     <!-- DIVIDER -->
-    <td width="2" style="background:#000000; font-size:0; line-height:0;">
-      &nbsp;
+    <td style="padding:0; margin:0;">
+      <img
+        src="https://mcvdesign.com/images/divider-1px.png"
+        width="1"
+        height="200"
+        style="display:block; border:0; outline:none; text-decoration:none;"
+        alt=""
+      >
     </td>
 
     <!-- SPACE AFTER DIVIDER -->
@@ -44,7 +50,7 @@
       <table role="presentation" cellpadding="0" cellspacing="0" border="0">
         <tr>
           <td style="padding-bottom:18px;">
-            <a href="https://linkedin.com/company/yourcompany">
+            <a href="https://www.linkedin.com/company/royalty-insurance">
               <img src="https://mcvdesign.com/images/social1.png"
                    width="24"
                    height="24"
@@ -80,7 +86,7 @@
 
         <tr>
           <td style="padding-bottom:18px;">
-            <a href="https://facebook.com/yourcompany">
+            <a href="https://www.facebook.com/RoyaltyInsurance">
               <img src="https://mcvdesign.com/images/social4.png"
                    width="24"
                    height="24"
