--- a/carlos.html
+++ b/carlos.html
@@ -1,7 +1,7 @@
 <table cellpadding="0" cellspacing="0" border="0" style="margin:0; padding:0; border-collapse:collapse; background-color:#ffffff;">
   <tr>
     <td style="margin:0; padding:0;">
-      <img src="images/Bradley Signature (1).png" alt="MCVDesign Signature" width="600" style="display:block; border:0; margin:0; padding:0;">
+      <img src="images/Bradley Signature 2.jpg" alt="MCVDesign Signature" width="601" height="187" style="display:block; border:0; margin:0; padding:0;">
     </td>
   </tr>
 </table>
